--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,8 +1,23 @@
 form{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 20px;
 }
 .submit{
     text-align: center;
-    margin-top: 20px;
+   
+}
+.newSign{
+    text-align: center;
+    margin-top: 60px;
+}
+.input {
+    height: 35px;
+    width:300px;
+    margin-top:20px;
+}
+.signIn{
+    background-color: yellow;
+    padding:10px 15px 10px 15px;
+    border-radius:5px;
+    margin-top:20px;
 }
